--- a/TODO
+++ b/TODO
@@ -1,7 +1,21 @@
-"coffee" is obviously no fitting name :-(
-check for validity of input (yaml.load() eg. returns a long string for non-yaml files)
-document supposed input file structure
-refactor cli-prompt code (that has become quite ugly)
+# TODO
 
-re-write in PHP :-)
-or, just a thought, how about prolog ? querying big datasets could be interesting.
+*aka a dev's backlog*
+
+*aka **T**his **o**ughttabe **d**one, **o**r ...*
+
+- ```coffee``` is obviously no fitting name :-(
+
+- check for validity of input (yaml.load() eg. returns a long string for non-yaml files)
+document supposed input file structure
+
+  ```[DONE]``` sanit-check implemented, testing alignment of issues and FSM
+
+- refactor cli-prompt code (that has become quite ugly)
+
+  ```[DONE]``` probably still needs work to actually be (unit)testable
+
+- re-write in PHP :-)
+- or, just a thought, how about prolog ? querying big datasets could be interesting.
+
+- test ```coffee.CLI``` (so far there's just a very basic smoke test instantiating a ```CLI``` object)
